[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dabstream2easydab"
version = "0.1.0"
description = "GTK relay from ETI or EDI internet streams to EasyDABV2"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "OpenAI Codex" }
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "pyzmq>=24",
]

[project.scripts]
dabstream2easydab = "dabstream2easydab.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dabstream2easydab = ["assets/*.svg"]
